--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+/*Border applies to all with 0 padding or margin*/
 * {
     box-sizing: border-box;
     padding: 0;
@@ -20,7 +21,7 @@ header h1 {
     font-size: 48px;
 }
 
-header h1 .seo {
+header h1 #seo {
     color: #d9dcd6;
 }
 
@@ -36,6 +37,7 @@ header nav ul {
     list-style-type: none;
 }
 
+/*Allows header and nav to display inline*/
 header nav ul li {
     display: inline-block;
     margin-left: 25px;
@@ -49,8 +51,8 @@ a {
 p {
     font-size: 16px;
 }
-
-.hero {
+/*Image below Navigation bar takes up full page*/
+#hero {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
@@ -58,7 +60,7 @@ p {
     background-size: cover;
     background-position: center;
 }
-
+/*Moves images to the left 25px*/
 .float-left {
     float: left;
     margin-right: 25px;
